Fix Docker Scout security issues
- Add SLSA provenance and SBOM attestation to build workflow
- Create dedicated non-root user (transmission-user) for security scanning
- Maintain compatibility with LinuxServer.io base image user management
- Address supply chain attestation requirements

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -215,6 +215,8 @@ jobs:
           outputs: type=image,name=${{ env.REGISTRY_DOCKERHUB }}/${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
           cache-from: type=gha,scope=${{ env.PLATFORM_PAIR }}
           cache-to: type=gha,mode=max,scope=${{ env.PLATFORM_PAIR }}
+          provenance: true
+          sbom: true
           build-args: |
             BUILDPLATFORM=${{ matrix.platform }}
             TARGETPLATFORM=${{ matrix.platform }}
